[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectormation"
version = "2.2.0"
description = "Vector-based math animation engine"
readme = "docs/README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joris Perrenet" },
]
keywords = ["animation", "svg", "math", "vector", "manim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "numpy>=2.0",
    "svgpathtools>=1.6",
    "websockets>=16.0",
]

[project.optional-dependencies]
export = [
    "cairosvg>=2.7",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/jorisperrenet/VectorMation"
Documentation = "https://jorisperrenet.github.io/VectorMation/"
Repository = "https://github.com/jorisperrenet/VectorMation"
